--- a/Leaflet-Step-1/index.html
+++ b/Leaflet-Step-1/index.html
@@ -2,49 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Citi Bike</title>
+  <meta charset="utf-8">
+  <title>Geo JSON</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Sanchez" rel="stylesheet">
-
-  <!-- Leaflet CSS & JS-->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" crossorigin=""></script>
-
-  <!-- d3 JavaScript -->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-
-  <!-- Icons -->
-  <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="static/css/leaflet.extra-markers.min.css">
-
-  <!-- MomentJS -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>
-
-  <!-- Icons -->
-  <script src="static/js/leaflet.extra-markers.min.js"></script>
-
-  <!-- polyfill.io is library for using newer JavaScript features in older browers (such as Object.assign) -->
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-
+  <!-- Leaflet CSS & JS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+  <!--D3 cdn-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
-
+  <link rel="stylesheet" type="text/css" href="static\css\style.css">
 </head>
 
 <body>
+  <!-- The div where we will inject our map -->
+  <div id="map"></div>
 
-  <!-- The div that holds our map -->
-  <div id="map-id"></div>
-
-
-  <!-- API Key -->
-  <script type="text/javascript" src="static/js/config.js"></script>
-
-  <!-- Our JavaScript -->
-  <script type="text/javascript" src="static/js/logic.js"></script>
-
+  <!-- Our JS -->
+  <script type="text/javascript" src="static\js\config.js"></script>
+  <script type="text/javascript" src="static\js\logic.js"></script>
 </body>
 
 </html>
